--- a/testing/downstream_testing/docker-compose.yml
+++ b/testing/downstream_testing/docker-compose.yml
@@ -3,18 +3,18 @@ services:
   downstream_runner:
     build: .
     volumes:
-      - type: volume
+      - type: bind
         source: "/home/runner/work/pytest/pytest"
         target: "/pytest"
         volume:
           nocopy: true
     depends_on:
       - db
-
-
   db:
     image: "postgres:latest"
     expose:
       - "5342"
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
+
+volumes:
