--- a/testing/downstream_testing/docker-compose.yml
+++ b/testing/downstream_testing/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     image: "postgres:latest"
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
-      - POSTGRES_USER=${USER}
+      - POSTGRES_USER="$USER"
       - POSTGRES_DB=pytest_django_should_never_get_accessed
     volumes:
       - /etc/passwd:/etc/passwd:ro
