--- a/testing/downstream_testing/docker-compose.yml
+++ b/testing/downstream_testing/docker-compose.yml
@@ -28,4 +28,4 @@ services:
       - POSTGRES_DB=pytest_django_should_never_get_accessed
     volumes:
       - /etc/passwd:/etc/passwd:ro
-      - data/db:/var/lib/postgresql/data
+      - ./data/db:/var/lib/postgresql/data
