--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -16,11 +16,13 @@ jobs:
         include:
           - name: "pytest-html"
             repo: "pytest-dev/pytest-html"
+            docker_profile: "--profile nodb"
             jobs: "build_python"
             workflow_name: "actions.yml"
             matrix_exclude: ""
           - name: "pytest-django"
             repo: "pytest-dev/pytest-django"
+            docker_profile: "--profile postgres"
             jobs: "test"
             workflow_name: "main.yml"
             matrix_exclude: |
@@ -28,6 +30,16 @@ jobs:
               py37-dj22-sqlite-xdist-coverage py38-dj30-sqlite-xdist-coverage 
               py38-dj31-sqlite-xdist-coverage py38-dj32-sqlite-xdist-coverage py39-djmain-sqlite-coverage
               py35-dj22-sqlite_file-coverage py36-dj31-mysql_myisam-coverage py36-dj32-mysql_myisam-coverage
+          - name: "pytest-django"
+            repo: "pytest-dev/pytest-django"
+            docker_profile: "--profile mysql"
+            jobs: "test"
+            workflow_name: "main.yml"
+            matrix_exclude: |
+              checkqa,docs py36-dj22-sqlite-xdist-coverage py35-dj22-postgres-pytest54-coverage
+              py37-dj22-sqlite-xdist-coverage py38-dj30-sqlite-xdist-coverage pypy3-dj22-postgres
+              py38-dj31-sqlite-xdist-coverage py38-dj32-sqlite-xdist-coverage py39-djmain-sqlite-coverage
+              py35-dj22-sqlite_file-coverage py39-dj31-postgres-xdist-coverage py39-dj32-postgres-xdist-coverage
 
     steps:
     - uses: actions/checkout@v2
@@ -39,14 +51,10 @@ jobs:
         fetch-depth: 0
         repository: ${{ matrix.repo }}
         path: ${{ matrix.name }}
-    - name: echo user
-      run: echo $USER
-    - name: Docker Compose - Downstream Runner
-      run: docker-compose -f ./testing/downstream_testing/docker-compose.yml up --exit-code-from downstream_runner
+    - name: Run Downstream Tests
+      run: docker-compose -f ./testing/downstream_testing/docker-compose.yml ${{ matrix.docker_profile }} up --exit-code-from downstream_runner
       env:
         DS_NAME: ${{ matrix.name }}
         DS_YAML: ./${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
         DS_JOBS: ${{ matrix.jobs }}
         DS_MATRIX_EXCLUDE: ${{ matrix.matrix_exclude }}
-    #- name: Run Docker - Downstream Runner
-    #  run: docker run --network container:downstream_runner appropriate/curl -s --retry 10 --retry-connrefused
