--- a/testing/downstream_testing/docker-compose.yml
+++ b/testing/downstream_testing/docker-compose.yml
@@ -1,6 +1,25 @@
 version: "3"
 services:
-  downstream_runner:
+  base_nodb:
+    build: .
+    environment:
+      - DS_NAME
+      - DS_YAML
+      - DS_JOBS
+      - DS_MATRIX_EXCLUDE
+      - TEST_DB_USER=$USER
+      - TEST_DB_PASSWORD=pytest_djang0
+      - TEST_DB_HOST=db
+    volumes:
+      - type: bind
+        source: /home/runner/work/pytest/pytest
+        target: /pytest
+        volume:
+          nocopy: true
+    profiles:
+      - nodb
+  
+  base_postgres:
     build: .
     environment:
       - DS_NAME
@@ -17,14 +36,47 @@ services:
         volume:
           nocopy: true
     depends_on:
-      - db
+      - postgres_db
+    profiles:
+      - postgres
 
-  db:
+  postgres_db:
     image: "postgres:latest"
     environment:
       - POSTGRES_PASSWORD=pytest_djang0
       - POSTGRES_USER=$USER
-      #- POSTGRES_DB=pytest_django_should_never_get_accessed
     volumes:
       - /etc/passwd:/etc/passwd:ro
       - ./data/db:/var/lib/postgresql/data
+    profiles:
+      - postgres
+
+  base_mysql:
+    build: .
+    environment:
+      - DS_NAME
+      - DS_YAML
+      - DS_JOBS
+      - DS_MATRIX_EXCLUDE
+      - TEST_DB_USER=root
+      - TEST_DB_PASSWORD=root
+    volumes:
+      - type: bind
+        source: /home/runner/work/pytest/pytest
+        target: /pytest
+        volume:
+          nocopy: true
+    depends_on:
+      - mysql_db
+    profiles:
+      - mysql
+
+  mysql_db:
+    image: "mysql:latest"
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+
+    volumes:
+      - ./data/db:/var/lib/mysql
+    profiles:
+      - mysql
