--- a/testing/downstream_testing/docker-compose.yml
+++ b/testing/downstream_testing/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - mysql
   mysql_db:
     image: "mysql:latest"
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       - MYSQL_ROOT_PASSWORD=root
     volumes:
