--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -4,13 +4,12 @@ FROM ubuntu:latest
 COPY entrypoint.sh /entrypoint.sh
 COPY pyenv-versions.txt ./
 
-RUN apt-get update
-
 # needed for Ubuntu to not stall on interactive tzdata setup
 RUN echo 'Etc/UTC' > /etc/timezone && \
     ln -s /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
-    apt-get install -q -y tzdata && rm -rf /var/lib/apt/lists/*
+    apt-get update && apt-get install -q -y tzdata && rm -rf /var/lib/apt/lists/*
 
+RUN apt-get update
 RUN apt-get install --no-install-recommends -y make build-essential libssl-dev zlib1g-dev \
     libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev xz-utils tk-dev \
     libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
