--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -15,7 +15,7 @@ RUN set -ex; \
 				  hkp://keyserver.ubuntu.com:80 \
 				  pgp.mit.edu; do \
 		gpg --keyserver "$server" --recv-keys "$key" && break || echo "Trying new keyserver..." \
-	done; \
+	done \
 	gpg --batch --export "$key" > /etc/apt/trusted.gpg.d/mysql.gpg; \
 	gpgconf --kill all; \
 	rm -rf "$GNUPGHOME"; \
